better stopgap dc until font's available

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -395,11 +395,11 @@ only screen and (                min-resolution: 2dppx) {
 }
 
 .page-icon .icon-lg-dc {
-	background: url('../img/dc-lg.gif') no-repeat 15px 0;
+	background: url('../img/dc-lg.png') no-repeat 15px 0;
 }
 
 .page-icon-mini .icon-lg-dc {
-	background: url('../img/dc-sm.gif') no-repeat 40px 0;
+	background: url('../img/dc-sm.png') no-repeat 40px 0;
 }
 
 .icon-lg-de:before {
